--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta author="Juhakov">
     <title>Juhakov</title>
     <link type="image/png" sizes="32x32" rel="icon" href="https://img.icons8.com/cute-clipart/64/000000/hammer.png">
@@ -12,7 +12,7 @@
       // redirect();
     </script>
 </head>
-<body bgcolor="#212121">
+<body>
 
     <div style="color:white; text-align: center;" > 
   <!--<h2 style="text-align:center"><kbd>Juhakov</kbd></h2>-->
@@ -59,6 +59,7 @@ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; pic
 <p>fsdf</p>
 <p>fsfsdf</p>
 <hr>
+
 <div class="connection" id="connection">
   <h1>Kapcsolat</h1>
     <h2>Telefonszam: +36206112753</h2>
@@ -72,7 +73,7 @@ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; pic
 </iframe>
 </div>
 
-<div class="text" id="text">
+<!--<div class="text" id="text">
   <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CfWUviFqaOs/?utm_source=ig_embed&amp;utm_campaign=loading" 
   data-instgrm-version="14" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:550px; min-width:200px; padding:0;max-height: 420px; 
   width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);"><div style="padding:16px;"> <a href="https://www.instagram.com/p/CfWUviFqaOs/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank"> 
@@ -84,7 +85,7 @@ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; pic
       <div style="background-color: #F4F4F4; border-radius: 50%; height: 12.5px; width: 12.5px; transform: translateX(9px) translateY(-18px);"></div></div><div style="margin-left: 8px;"> <div style=" background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 20px; width: 20px;"></div> <div style=" width: 0; height: 0; border-top: 2px solid transparent; border-left: 6px solid #f4f4f4; border-bottom: 2px solid transparent; transform: translateX(16px) translateY(-4px) rotate(30deg)"></div></div><div style="margin-left: auto;"> <div style=" width: 0px; border-top: 8px solid #F4F4F4; border-right: 8px solid transparent; transform: translateY(16px);"></div>
        <div style=" background-color: #F4F4F4; flex-grow: 0; height: 12px; width: 16px; transform: translateY(-4px);"></div> <div style=" width: 0; height: 0; border-top: 8px solid #F4F4F4; border-left: 8px solid transparent; transform: translateY(-4px) translateX(8px);"></div></div></div> <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center; margin-bottom: 24px;"> <div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; margin-bottom: 6px; width: 224px;"></div> <div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; width: 144px;"></div></div></a><p style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; line-height:17px; margin-bottom:0; margin-top:8px; overflow:hidden; padding:8px 0 7px; text-align:center; text-overflow:ellipsis; white-space:nowrap;">
         <a href="https://www.instagram.com/p/CfWUviFqaOs/?utm_source=ig_embed&amp;utm_campaign=loading" style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;" target="_blank">A post shared by ALDI Magyarország (@aldi.magyarorszag)</a></p></div></blockquote> <script async src="//www.instagram.com/embed.js"></script>
-</div>
+</div>-->
 
 <div style="text-align: right;" id="down">
   <button type="button" id="button" onclick="func()">Fel</button>
