--- a/ajanlatkeres.html
+++ b/ajanlatkeres.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
-<body bgcolor="#212121">
+<body>
     <div style="color:white; text-align: center;" > 
         <!--<h2 style="text-align:center"><kbd>Juhakov</kbd></h2>-->
         <a href="index.html">
